# FoundationModel_GP

./: LICENSE  README.md  environment.yml  gpt-prompt.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data/: default.yaml  small.yaml
configs/experiment/: debug.yaml  production.yaml
configs/model/: default.yaml  small.yaml
configs/train/: debug.yaml  default.yaml
examples/: basic_training.py  data_pipeline.py  model_usage.py  scedc_dataset_example.py  wav2vec_transfer_demo.py
notebooks/: gp2vec_training_prototype.ipynb
scripts/: extract_wav2vec_weights.py  fetch_metadata.py  make_manifest.py  pretrain.sh
src/gp2vec/: __init__.py
src/gp2vec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gp2vec/data/: __init__.py  datapipes.py  decoder.py  metadata.py  s3_manifest.py
src/gp2vec/models/: __init__.py  feature_encoder.py  gp2vec.py  losses.py  transformer.py  vq.py
src/gp2vec/train/: __init__.py  evaluate_downstream.py  module.py  train.py
src/gp2vec/utils/: __init__.py  aug.py  geo.py  io.py  wav2vec_transfer.py
